# back-ms-users

./: .gitignore  FINAL_FIX_SUMMARY.md  README.md  SPRINGBOOT_LISTUSERS_ENHANCEMENT.md  TEMPLATES_UPDATED_SUMMARY.md  WEBFLUX_TEST_FIXES.md  docker-compose-postgresql-example.yml  pyproject.toml  test_pr_template.py  test_pr_template_local.py
backstage-templates/: collection-components.yml  collection.yml
docs/md/: back-ms-movies_20251106_203503.md  back-ms-movies_20251107_062338.md  back-ms-movies_20251107_083204.md  back-ms-movies_20251107_091314.md  back-ms-movies_20251107_091832.md  back-ms-movies_20251107_092904.md  back-ms-movies_20251107_102725.md  back-ms-movies_20251107_104109.md  back-ms-movies_20251108_104557.md  back-ms-movies_20251109_160847.md  back-ms-movies_20251109_164836.md  back-ms-movies_20251109_190502.md  back-ms-movies_20251110_095355.md  back-ms-movies_20251110_103405.md  back-ms-movies_20251110_143720.md  back-ms-movies_20251110_145703.md  back-ms-movies_20251110_155929.md  back-ms-movies_20251110_163254.md  back-ms-movies_20251110_220458.md  back-ms-movies_20251111_105646.md  back-ms-movies_20251111_113111.md  back-ms-movies_20251111_114013.md  (+59 more)
ia/: smithy-service-generator-prompt.txt
libs/: architect-docs-generator.py  fake-data-generator.py  java-backend-generator.py  java-springboot-backend-generator.py  java-webflux-backend-generator.py  jsonschema-generator.py  openapi-docs-generator.py
schemas/: all_schemas.json  generation_report.json
scripts/: branch_manager.py  code-gen-pipeline.sh  pipeline-config.json  process_projects.py
(+382 files in other folders)
