[project]
name = "boiler-plate-code-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "jiliar.silgado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <3.13" 

dependencies = [
    "pystache (>=0.6.8,<0.7.0)",
    "jsf (>=0.11.2,<0.12.0)",
    "faker (>=37.12.0,<38.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"